# agentic-discord-moderation-bot

./: .env.example  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: add-discord-command.prompt.md  add-langchain-langgraph-feature.prompt.md
.github/skills/discord-bot-development/: SKILL.md
notebooks/: lesson01_first_llm_call.ipynb  lesson02_lcel_prompts.ipynb  lesson03_custom_tools.ipynb  lesson04_react_agent.ipynb  lesson05_structured_output.ipynb
src/agentic_discord_moderation_bot/: AgentBot.py  __init__.py  bot.py
src/agentic_discord_moderation_bot/cogs/: query.py
src/agentic_discord_moderation_bot/utils/: AgentBot.py  aiservices.py  tools.py
